--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
   font-family: 'Roboto Slab', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
   color: #37393A; 
 }
 
@@ -23,6 +22,7 @@ a:hover {
   background-color: #37393A;
   color: #E0E0E2;
   border: none;
+  margin: 0 2%;
 }
 
 .custom-button:hover {
