--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -2,16 +2,12 @@
     margin: 7%;
 }
 
-.custom-card {
-    width: 22rem;
-    height: 22rem;
-}
-
 .img {
-    float:  left;
-    width:  100%;
-    height: 100%;
-    background-size: cover;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    padding-top: 66.64%
 }
 
   .hovereffect {
