--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   background-color: #A7C4A0;
   font-family: 'Roboto Slab', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing:border-box;
+  box-sizing: border-box;
   color: #37393A; 
 }
 
@@ -16,15 +20,4 @@ h2, h1 {
 a:hover {
   color: #DAD4EF;
   text-decoration: none;
-}
-
-.custom-button {
-  background-color: #37393A;
-  color: #E0E0E2;
-  border: none;
-  margin: 0 2%;
-}
-
-.custom-button:hover {
-  background-color: #DAD4EF;
 }
