updated color scheme

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,12 +1,12 @@
 .custom-footer {
-    background-color: #A7C4A0;
+    background-color: #F7F7F7;
     color: #E0E0E2;
     padding: 10px;
     text-align: center;
 }
 
 .footer-link {
-    color: #37393A;
+    color: #7DA2A9;
     margin: 5px;
 }
 
