--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -10,32 +10,32 @@
     padding-top: 66.64%
 }
 
-.main-title{
+.main-title {
   color: #2d2d2d;
   text-align: center;
   text-transform: capitalize;
   padding: 0.7em 0;
 }
 
-.container{
+.container {
   padding: 1em 0;
   float: left;
   width: 50%;
 }
-@media screen and (max-width: 640px){
-  .container{
+@media screen and (max-width: 640px) {
+  .container {
     display: block;
     width: 100%;
   }
 }
 
-@media screen and (min-width: 900px){
-  .container{
+@media screen and (min-width: 900px) {
+  .container {
     width: 33.33333%;
   }
 }
 
-.container .title{
+.container .title {
   color: #1a1a1a;
   text-align: center;
   margin-bottom: 10px;
@@ -64,11 +64,11 @@
   transition: all 0.4s ease-in-out 0s;
 }
 
-.content:hover .content-overlay{
+.content:hover .content-overlay {
   opacity: 1;
 }
 
-.content-image{
+.content-image {
   width: 100%;
 }
 
@@ -89,13 +89,13 @@
   transition: all 0.3s ease-in-out 0s;
 }
 
-.content:hover .content-details{
+.content:hover .content-details {
   top: 50%;
   left: 50%;
   opacity: 1;
 }
 
-.content-details h3{
+.content-details h3 {
   color: #fff;
   font-weight: 500;
   letter-spacing: 0.15em;
@@ -103,11 +103,20 @@
   text-transform: uppercase;
 }
 
-.content-details p{
+.content-details p {
   color: #fff;
   font-size: 0.8em;
 }
 
-.fadeIn-top{
+.fadeIn-top {
     top: 20%;
+}
+
+.project-link {
+    color: #7DA2A9;
+    text-decoration: none;
+}
+
+.project-link:hover {
+    color: #F7F7F7;
 }
