--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -13,7 +13,7 @@
 }
 
 #myName {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Space Mono', monospace;
     color: #7DA2A9;
     font-size: 40px;
 }
