--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #F7F7F7;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Work Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-box-sizing: border-box;
@@ -14,7 +14,7 @@ body {
 
 h2, h1 {
   color: #2E303E;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Space Mono', monospace;
 }
 
 a:hover {
