--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,9 +5,9 @@
 
 #bioLink,
 #bioLink:visited {
-    color: #7DA2A9;
+    color: #FC332C;
     text-decoration: none;
 }
 #bioLink:hover {
-    color: #2E303E;
+    color: #FC7C7C;
 }
