--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -10,13 +10,6 @@
     padding-top: 66.64%
 }
 
-.main-title {
-  color: #2d2d2d;
-  text-align: center;
-  text-transform: capitalize;
-  padding: 0.7em 0;
-}
-
 .container {
   padding: 2.5em 0;
   float: left;
@@ -113,10 +106,10 @@
 }
 
 .project-link {
-    color: #7DA2A9;
+    color: #FC332C;
     text-decoration: none;
 }
 
 .project-link:hover {
-    color: #F7F7F7;
+    color: #FC7C7C;
 }
