--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -13,7 +13,7 @@
 }
 
 #myName {
-    font-family: 'Space Mono', monospace;
+    font-family: 'Marcellus', serif;
     color: #FC332C;
     font-size: 40px;
 }
