updated color scheme

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,12 +1,12 @@
 .custom-footer {
-    background-color: #FCDBDB;
+    background-color: #f8dfdb;
     color: #E0E0E2;
     padding: 10px;
     text-align: center;
 }
 
 .footer-link {
-    color: #FC332C;
+    color: #fc221c;
     margin: 5px;
 }
 
