--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f8dfdb;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Playfair Display', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-box-sizing: border-box;
